tests/error/comptime/check_slice_construction03.bz
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		__builtin_slice_from_ptrs(foo(), foo());
	});
}
